--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "angular-animations": "^0.11.0",
+    "netlify": "^13.1.9",
     "primeicons": "^6.0.1",
     "primeng": "^12.2.3",
     "rxjs": "~6.6.0",
